# system-monitor

./: .gitignore  README.md  pyproject.toml  setup.py  system_monitor.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
tests/: test_system_monitor.py
